ASH: Fixed alignment and scaling of header buttons.

--- a/css/style.css
+++ b/css/style.css
@@ -1,91 +1,108 @@
-body{
-    background-color : #101010;
-    margin : 0px;
-  }
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #101010;
+  margin: 0px;
+}
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Courier New, Courier, monospace;
-    color: #54ff9f;
-    text-align : center;
+  font-family: "Courier New", Courier, monospace;
+  color: #54ff9f;
+  text-align : center;
 }
 
+@media screen and (max-width: 600px) {
 
-    h1#main-header {
-        top: 0px;
-        font-size: 80px;
-        text-align: center;
-        background: linear-gradient(#303030,#101010);
-        height: 150px;
-        margin: 0px;
-        padding: 15px;
-        color: #54ff9f;
-    }
+  #main-header {
+    font-size: 2.5em;
+  }
+
+}
+
+@media screen and (min-width: 600px) {
+
+  #main-header {
+    font-size: 5.0em;
+  }
+
+}
+
+h1#main-header {
+  text-align: center;
+  background: linear-gradient(#303030,#101010);
+  margin: 0px;
+  padding-top: 0.5em;
+  color: #54ff9f;
+}
 
 .eye-friendly-block {
-    font-size : 15px;
-    font-family: Courier New, Courier, monospace;
-    background: #303030;
-    margin-left: 15px;
-    margin-right: 15px;
-    border-radius: 30px;
-    padding: 15px;
-    color: #54ff9f;
-    /*font-weight: bold;*/
-    margin-left: 10%;
-    margin-right: 10%;
+  font-size : 15px;
+  font-family: "Courier New", Courier, monospace;
+  background: #303030;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-radius: 30px;
+  padding: 15px;
+  color: #54ff9f;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
-p.eye-friendly-block{
-    text-indent : 50px;
+p.eye-friendly-block {
+  text-indent: 50px;
 }
 
 
-ul.eye-friendly-block{
-    padding-left : 50px;
+ul.eye-friendly-block {
+  padding-left: 50px;
 }
 
 a:visited, a:link, a:active{
-    text-decoration : none;
+  text-decoration: none;
 }
 
 a.eye-friendly-block:hover {
-    background: #707070;
-    color : #29fe86;
+  background: #707070;
+  color: #29fe86;
 }
 
-a.eye-friendly-block{
-    margin : 10px;
-
+a.eye-friendly-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin : 10px;
+  text-align: center;
 }
 
 a.paragraphed-link {
-    color: #F6E7D2;
-    font-weight: 800;
-    border-radius: 7.5px;
-    padding-left: 2px;
-    padding-right: 2px;
+  color: #F6E7D2;
+  font-weight: 800;
+  border-radius: 7.5px;
+  padding-left: 2px;
+  padding-right: 2px;
 }
 
-    a.paragraphed-link:hover {
-        background: #29fe86;
-        color: #000;
-    }
+a.paragraphed-link:hover {
+  background: #29fe86;
+  color: #000;
+}
 
 div#main-header-links-container {
-    position: absolute;
-    top: 110px;
-    padding: 10px;
-    /*height : 100px;*/
-    width: auto;
-    margin-left: 15%;
-    margin-right: 15%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  margin-left: 10%;
+  margin-right: 10%;
+
 }
 
 iframe#shadows {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    height: 500px;
-    overflow: hidden;
-    border: 2px solid #303030
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  height: 500px;
+  overflow: hidden;
+  border: 2px solid #303030
 }
